completed s3 image/file uploader